Changed android package name of app, added android platform, and finished implementing custom fading header

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.jonnyramen.ionicdeliveroo",
+  "appId": "io.ionic.starter",
   "appName": "foodUi",
   "bundledWebRuntime": false,
   "npmClient": "npm",
